--- a/topic1/1.1_intro_to_llm_apis_solutions.ipynb
+++ b/topic1/1.1_intro_to_llm_apis_solutions.ipynb
@@ -16,6 +16,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic1/1.1_intro_to_llm_apis_solutions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# LLMOps Essentials, practice 1.1. Intro to LLM APIs\n",
         "\n",
