--- a/topic1/1.6_llm_inference_parameters.ipynb
+++ b/topic1/1.6_llm_inference_parameters.ipynb
@@ -228,7 +228,7 @@
         "* Setting `logprobs=True` in the `completion` function will return for each generated token its **log probability** (that is, $\\log{p_{\\text{generated_token}}}$). Log probabilities are negative (as logarithms of numbers between 0 and 1). The closer $\\log{p_{\\text{generated_token}}}$ is to $0$, the closer $p_{\\text{generated_token}}$ itself is to $1$.\n",
         "* If, in addition to that, you set `top_logprobs` to an integer between 0 and 5, you'll get this many maximal $\\log{p_i}$ for each generated position. Note: an actual generated token is not necessary among the most probable ones.\n",
         "\n",
-        "Let's look an an example:"
+        "Let's look an an example. For our convenience, we'll create a function `answer_with_logprobs` that will return the completion with added top log-probabilities, and after that, we'll also create a function to visualize them all as a nice table."
       ],
       "metadata": {
         "id": "th-c6Utmi7bn"
@@ -755,7 +755,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note that the token `The` in the first position wasn't actually the most probably. The most probable was `a` with log probability $-0.9 > -1.39$. At the other positions we have indeed the most probable tokens.\n",
+        "Note that the token `The` in the first position wasn't actually the most probable. The most probable was `a` with log probability $-0.9 > -1.39$. At the other positions we have indeed the most probable tokens.\n",
         "\n",
         "The final token is the `EOS` (end of string token) which tells the LLM that it's time to stop generating."
       ],
