--- a/topic1/1.6_llm_inference_parameters.ipynb
+++ b/topic1/1.6_llm_inference_parameters.ipynb
@@ -28,7 +28,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# LLMOps Essentials, practice 1.6. LLM Inference Parameters"
+        "# LLM Engineering Essentials by Nebius Academy"
+        "\n"
+        "1.6. LLM Inference Parameters"
       ],
       "metadata": {
         "id": "Vm506vpf9u9b"
