--- a/topic1/1.6_llm_inference_parameters.ipynb
+++ b/topic1/1.6_llm_inference_parameters.ipynb
@@ -28,8 +28,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# LLM Engineering Essentials by Nebius Academy"
-        "\n"
+        "# LLM Engineering Essentials by Nebius Academy",
+        "\n",
         "1.6. LLM Inference Parameters"
       ],
       "metadata": {
