--- a/topic1/1.6_llm_inference_parameters.ipynb
+++ b/topic1/1.6_llm_inference_parameters.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "# LLM Engineering Essentials by Nebius Academy",
         "\n",
-        "1.6. LLM Inference Parameters"
+        "# 1.6. LLM Inference Parameters"
       ],
       "metadata": {
         "id": "Vm506vpf9u9b"
