--- a/topic1/1.7_creating_an_llm-powered_character.ipynb
+++ b/topic1/1.7_creating_an_llm-powered_character.ipynb
@@ -29,7 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# LLMOps Essentials 1.7. Creating an LLM-powered character.ipynb"
+        "# LLM Engineering Essentials by Nebius Academy",
+        "\n",
+        "# 1.7. Creating an LLM-powered character.ipynb"
       ],
       "metadata": {
         "id": "ko4vwa65mujr"
