--- a/topic1/1.1_intro_to_llm_apis.ipynb
+++ b/topic1/1.1_intro_to_llm_apis.ipynb
@@ -29,6 +29,8 @@
       "source": [
         "# LLM Engineering Essentials by Nebius Academy\n",
         "\n",
+        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)",
+        "\n",
         "# 1.1. Intro to LLM APIs\n",
         "\n",
         "In this notebook, we'll start exploring LLMs and LLM APIs, their capabilities and their failures. After working with it, you'll be able to call APIs of LLMs and Multimodal LLMs such as GPT-4o, Llama-3.1-8B, Qwen2-VL-72B, and many more.\n",
