--- a/topic1/1.6_llm_inference_parameters.ipynb
+++ b/topic1/1.6_llm_inference_parameters.ipynb
@@ -30,6 +30,8 @@
       "source": [
         "# LLM Engineering Essentials by Nebius Academy",
         "\n",
+        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)",
+        "\n",
         "# 1.6. LLM Inference Parameters"
       ],
       "metadata": {
