--- a/topic1/1.7_creating_an_llm-powered_character.ipynb
+++ b/topic1/1.7_creating_an_llm-powered_character.ipynb
@@ -31,6 +31,8 @@
       "source": [
         "# LLM Engineering Essentials by Nebius Academy",
         "\n",
+        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)",
+        "\n",
         "# 1.7. Creating an LLM-powered character.ipynb"
       ],
       "metadata": {
