--- a/topic1/1.1_intro_to_llm_apis.ipynb
+++ b/topic1/1.1_intro_to_llm_apis.ipynb
@@ -29,7 +29,7 @@
       "source": [
         "# LLM Engineering Essentials by Nebius Academy\n",
         "\n",
-        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)",
+        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)\n",
         "\n",
         "The course is in development now, with more materials coming soon. [Subscribe to stay updated](https://academy.nebius.com/llm-engineering-essentials/update/)",
         "\n",
