--- a/topic1/1.7_creating_an_llm-powered_character.ipynb
+++ b/topic1/1.7_creating_an_llm-powered_character.ipynb
@@ -31,7 +31,9 @@
       "source": [
         "# LLM Engineering Essentials by Nebius Academy",
         "\n",
-        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)",
+        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)\n",
+        "\n",
+        "The course is in development now, with more materials coming soon. [Subscribe to stay updated](https://academy.nebius.com/llm-engineering-essentials/update/)",
         "\n",
         "# 1.7. Creating an LLM-powered character.ipynb"
       ],
