--- a/topic2/r.1_intro_to_llm_reasoning.ipynb
+++ b/topic2/r.1_intro_to_llm_reasoning.ipynb
@@ -6515,7 +6515,17 @@
       }
     }
   },
-  "cells": [
+  "cells": [    
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic2/r.1_intro_to_llm_reasoning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -8854,7 +8864,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Practice: Exploring non-linear reasoning"
+        "# Practice: Exploring non-linear reasoning",
+        "\n",
+        "If you encounter any difficulties or simply want to see our solutions, feel free to check the [Solutions notebook](https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic2/r.1_intro_to_llm_reasoning.ipynb)."
       ],
       "metadata": {
         "id": "hAl1Qub81LjL"
