--- a/topic2/r.2_inference_time_compute.ipynb
+++ b/topic2/r.2_inference_time_compute.ipynb
@@ -4125,7 +4125,17 @@
     },
     "accelerator": "GPU"
   },
-  "cells": [
+  "cells": [  
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic2/r.2_inference_time_compute.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
