--- a/topic2/a.1_llm_tools_and_agents_solutions.ipynb
+++ b/topic2/a.1_llm_tools_and_agents_solutions.ipynb
@@ -14,7 +14,17 @@
       "name": "python"
     }
   },
-  "cells": [
+  "cells": [  
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic2/a.1_llm_tools_and_agents_solutions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
