--- a/topic3/3.1_the_concept_of_rag.ipynb
+++ b/topic3/3.1_the_concept_of_rag.ipynb
@@ -17,7 +17,23 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
+        "<a href=\"https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic3/3.1_the_concept_of_rag.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# LLM Engineering Essentials by Nebius Academy\n",
+        "\n",
+        "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)\n",
+        "\n",
+        "The course is in development now, with more materials coming soon. 
+        "\n",
         "Starting **May 7**, join weekly expert-led Q&A sessions to ask questions and get feedback from course lecturers and mentors.\n",
         "\n",
         "[Sign up here](https://nebius.zoom.us/webinar/register/2017452395379/WN_fRQs-XofSzivwkNQUfGxBA) for the intro session — it's happening on May 7 at 7 PM CET."
