--- a/topic3/3.1_the_concept_of_rag.ipynb
+++ b/topic3/3.1_the_concept_of_rag.ipynb
@@ -32,7 +32,7 @@
         "\n",
         "Course github: [link](https://github.com/Nebius-Academy/LLM-Engineering-Essentials/tree/main)\n",
         "\n",
-        "The course is in development now, with more materials coming soon. 
+        "The course is in development now, with more materials coming soon.",
         "\n",
         "Starting **May 7**, join weekly expert-led Q&A sessions to ask questions and get feedback from course lecturers and mentors.\n",
         "\n",
