--- a/topic3/3.2_database_search_and_vector_stores_solutuons.ipynb
+++ b/topic3/3.2_database_search_and_vector_stores_solutuons.ipynb
@@ -18,12 +18,13 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# LLM Engineering Essentials 3.2. Database search and Vector Stores"
-      ],
       "metadata": {
-        "id": "oKXTtr5gUm7q"
-      }
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nebius-Academy/LLM-Engineering-Essentials/blob/main/topic3/3.2_database_search_and_vector_stores_solutuons.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
