--- a/topic1/1.5_how_to_choose_an_llm.ipynb
+++ b/topic1/1.5_how_to_choose_an_llm.ipynb
@@ -1991,7 +1991,14 @@
         "So, if you want to use LLMs with languages other than English, be careful and try to check what's known about the model's multilingual capabilities. So, for example:\n",
         "\n",
         "* The [Llama-3-8B model card](https://huggingface.co/meta-llama/Meta-Llama-3-8B-Instruct) informs that \"*Intended Use Cases Llama 3 is intended for commercial and research use in English.*\" (Sad but honest.)\n",
-        "*  The [Llama-3.1-8B model card](https://huggingface.co/meta-llama/Llama-3.1-8B-Instruct) claims that supported languages are English, German, French, Italian, Portuguese, Hindi, Spanish, and Thai."
+        "*  The [Llama-3.1-8B model card](https://huggingface.co/meta-llama/Llama-3.1-8B-Instruct) claims that supported languages are English, German, French, Italian, Portuguese, Hindi, Spanish, and Thai.\n",
+        "* [Qwen3 models](https://qwenlm.github.io/blog/qwen3/) are supporting 119 languages and dialects.\n",
+        "* [Gemma3](https://blog.google/technology/developers/gemma-3/) promises to support over 140 languages.\n",
+        "* [Llama 4](https://ai.meta.com/blog/llama-4-multimodal-intelligence/) modestly claims to be pretrained on 200 languages, including over 100 with over 1 billion tokens each. (Though it's not totally synonymic to supporting over 200 languages.)\n",
+        "\n",
+        "So, LLM creaters seem to acknowledge the importance of multilinguality and work towards it. But anyway, don't take non-English proficiency for granted.\n",
+        "\n",
+        "[Here's an example](https://huggingface.co/spaces/Eurolingua/european-llm-leaderboard) of an LLM leaderboard that takes multilingual proficiency into account - alas, for European languages only."
       ],
       "metadata": {
         "id": "pBCkHWVqsSec"
