--- a/topic1/1.1_intro_to_llm_apis.ipynb
+++ b/topic1/1.1_intro_to_llm_apis.ipynb
@@ -39,7 +39,7 @@
         "\n",
         "# The first step: getting API keys\n",
         "\n",
-        "Mostly we'll use the API of **Nebius AI Studio** (https://studio.nebius.ai/): This platform offers open-source LLMs from families such as Llama, Mistral, Qwen, and Gemma. Generate your API key here: [Nebius API Keys](https://studio.nebius.ai/settings/api-keys) (this page will only be available after you register).\n",
+        "Mostly we'll use the API of [**Nebius AI Studio**](https://qrco.de/naaistudio): This platform offers open-source LLMs from families such as Llama, Mistral, Qwen, and Gemma. Generate your API key here: [Nebius API Keys](https://studio.nebius.ai/settings/api-keys) (this page will only be available after you register).\n",
         "\n",
         "However, in some examples we'll also check **OpenAI** API (https://platform.openai.com/), which provides access to GPT models like GPT-4. You can generate an API key here: [OpenAI API Keys](https://platform.openai.com/settings/organization/api-keys) (this page will only be available after you register).\n",
         "\n",
